--- a/Lab 2/README
+++ b/Lab 2/README
@@ -1,6 +1,9 @@
 Danielle DiTomasso
 Lab 2 README
 
+(NOTE: Our group divided up work, and my portion was to Annotate Articles 1 and 2,
+and to help contribute to the CSS file)
+
 For this lab, I first started writing the proper HTML tags and headers for 
 the full, un annotated versions of Article 1 and Article 2. From there,
 I completed a summary and annotation of the text, using those same tags and 
